Adds the readme file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "math_parser"
+name = "restac"
 version = "0.1.0"
 edition = "2021"
+authors = ["Daniel <carlosdanielmaturano@proton.me>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
